AX: content of <script> elements announced by VoiceOver inside containers with display: contents https://bugs.webkit.org/show_bug.cgi?id=283645 rdar://problem/140493798

Reviewed by Chris Fleizach.

Up until this point, we have got away with not handling display:none (which is the user-agent default `display` for
script) because it causes the content within to not have a renderer, and thus not be a candidate for AX object creation,
minus a few exceptions — display:contents, elements within a canvas, a few others, and most notably: elements descending
from another element involved in a relation.

Because the unrendered text inside the script tag is descendant of an element with a relation, we create an AX object
for it. And because AccessibilityNodeObject::computeIsIgnored didn't check for a display:none ancestor, we compute
the unrendered text inside the script to be unignored.

With this commit, we check for display:none in our existing walk up the ancestry as part of the
AccessibilityObject::defaultObjectInclusion(), and ignore the object if we find one.

* LayoutTests/accessibility/display-none-descendant-of-relation-expected.txt: Added.
* LayoutTests/accessibility/display-none-descendant-of-relation.html: Added.
* LayoutTests/platform/glib/TestExpectations: Skip new test.
* LayoutTests/platform/ios/TestExpectations: Enable new test.
* LayoutTests/platform/ios/accessibility/display-none-descendant-of-relation-expected.txt: Added.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::isDOMHidden):
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::computeIsIgnored const):
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::style const):
(WebCore::AccessibilityObject::existingStyle const):
(WebCore::AccessibilityObject::defaultObjectInclusion const):
* Source/WebCore/accessibility/AccessibilityObject.h:

Canonical link: https://commits.webkit.org/287159@main